update island intro

--- a/island/index.html
+++ b/island/index.html
@@ -64,19 +64,19 @@
       </div>
       <div class="code">
         <p>
-          Whenever I explore a new library or framework, I have a hard time accepting exceptionally 'automagical' code without a quick glance at the source files. I generally trust that the functions <em>work</em>, but I like to be able to have a general understanding of <em>how</em>.
+          Whenever I explore a new library or framework, I have a hard time jumping into exceptionally 'automagical' code without a quick glance at the source files. I generally trust that the functions <em>work</em>, but I like to be able to have a general understanding of <em>how</em>.
         </p>
 
         <p>
-          Even in widely-used frameworks like Ruby on Rails, few end-to-end function explanations exist. I understand that there's likely very little demand for that type of writing, though I'd find it more interesting than some tech blogs.
+          Even in widely-used frameworks like Rails, few end-to-end function explanations exist. I understand there's likely very little demand, though I'd find it more interesting than some tech blogs.
         </p>
 
         <p>
-          But when exploring Backbone.js for the first time, I stumbled upon a <a href="http://backbonejs.org/docs/backbone.html">project</a> by Jeremy Ashkenas, an annotated copy of the Backbone source code. I loved that idea, I like silly names, and I love the Oxford comma, so I created 'Mini-Source Island.''
+          But when exploring Backbone.js for the first time, I stumbled upon a <a href="http://backbonejs.org/docs/backbone.html">project</a> by Jeremy Ashkenas, an fully annotated copy of the Backbone source code. I loved that idea, I like silly names, and I'm a big fan of the Oxford comma, so I created 'Mini-Source Island.''
         </p>
 
         <p>
-          Since I was doing the source code exploration anyway, I figured I'd share what I found. Sometimes the descriptions are abbreviated; I don't dig much deeper than what an intermediate-level developer might find interesting. The goal is to make the 'automagical' code feel a little less like a black box, and to highlight what incredible tools the open-source community has built.
+          Since I was doing the research anyway, I figured I'd share what I found. Sometimes the descriptions are abbreviated; I don't dig much deeper than what an intermediate-level developer might find interesting. The goal is to make the 'automagical' code feel a little less like a black box, and to highlight what incredible tools the open-source community builds.
         </p>
 
         <p>
